[project]
name = "active-script"
version = "0.1.0"
description = "Active script for Slack"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright",
    "apscheduler",
    "pytz",
    "ntplib",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
